# spherex_emu

./: .gitignore  .readthedocs.yaml  Multi-tracer analyses for spherexemu.ipynb  README.md  array.slurm  gpsclass.py  grace.slurm  install.sh  lhc.py  lhc.txt  linps.py  ograce.out  ograce10_1210_1210_1210_1210_1210_1210_1210_1210_1210_1210_12.out  ograce200.out  parallelemu.py  params.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pytest.yaml
.ipynb_checkpoints/: Multi-tracer analyses for spherexemu-checkpoint.ipynb
configs/: example.yaml  get_covariance.yaml  network_pars_single_tracer_single_redshift.yaml
configs/cosmo_pars/: cosmo_pars_example.yaml  cosmo_pars_tns.yaml  eft_2_sample_2_redshift.yaml  eft_single_sample_2_redshift.yaml  eft_single_sample_single_redshift.yaml  eft_single_tracer_fiducial.yaml  planck2018_fiducial.yaml  tns_2_sample_2_redshift.yaml
configs/network_pars/: example.yaml  network_pars_2_sample_2_redshift.yaml  network_pars_E2E.yaml  network_pars_example.yaml  network_pars_paper_run.yaml  network_pars_single_sample_2_redshift.yaml  network_pars_single_sample_single_redshift.yaml  network_pars_single_tracer_2_redshift.yaml  network_pars_single_tracer_single_redshift.yaml
configs/survey_pars/: survey_pars_2_sample_2_redshift.yaml  survey_pars_example.yaml  survey_pars_single_sample_single_redshift.yaml  survey_pars_single_tracer_2_redshift.yaml  survey_pars_single_tracer_single_redshift.yaml  survey_pars_v28_base_cbe.yaml
docs/: conf.py  dataset.rst  emulator.rst  index.rst  install.rst  requirements.txt  workflow.rst
docs/api/: cosmo_utils.rst  dataset.rst  emulator.rst  index.rst  (+2 more)
fastpt/: FASTPT.py  matter_power_spt_updated_G3_factor.py
notebooks/: Test-Network.ipynb  test_emulator.ipynb
scripts/: generate_training_set.slurm  get_covariance.sh  get_powerspectra_eft.py  get_powerspectra_tns.py  make_data_covariance.py  make_training_set_eft.py  make_training_set_eft_mpi.py  make_training_set_tns.py  mcmc_analysis.py  optimize_hyperparameters.py  organize_training_set.py  profile_emulator.py  train_emulator.py
spherex_emu/: dataset.py  emulator.py  filepaths.py  utils.py
tests/: test_analytic_terms.py  test_network.py  test_ps_1loop.py  test_utils.py
(+42 files in other folders)
