[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spherex_emu"
description = "package for emulating the galaxy power spectrum using neural networks"
version = "0.2.1"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Joe Adamo", email = "jadamo@arizona.edu" }
]
requires-python = ">= 3.9"
dependencies = [
    "setuptools",
    "build",
    "numpy",
    "scipy",
    "torch >=2.0; extra != 'gpu'",
    "pytest",
    "pyyaml"
]

[project.optional-dependencies]
gpu = ["torch @ https://download.pytorch.org/whl/cu118"]

# required because I have an old directory structure
[tool.setuptools]
py-modules = ['spherex_emu']

[tool.setuptools.package-data]
spherex_emu = ['spherex_emu/*']