[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spherex_emu"
description = "package for emulating the galaxy power spectrum using neural networks"
version = "0.9.1"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Joe Adamo", email = "jadamo@arizona.edu" }
]
requires-python = ">= 3.9"
dependencies = [
    "setuptools",
    "build",
    "numpy",
    "scipy",
    "torch",
    "pytest",
    "pyyaml",
    "symbolic_pofk@git+https://github.com/DeaglanBartlett/symbolic_pofk.git"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/jadamo/spherex_emu"
